--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,6 +95,7 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.5"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.5"
     implementation "androidx.navigation:navigation-compose:2.7.5"
+    implementation "androidx.hilt:hilt-navigation-compose:1.1.0"
 
     // Audio and Media
     implementation 'androidx.media:media:1.7.0'
